--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "devDependencies": {
+   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
     "babel-cli": "^6.18.0",
-    "babel-plugin-istanbul": "^2.0.0",
-    "babel-preset-latest": "^6.16.0",
+    "babel-plugin-istanbul": "^3.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
-    "babelify": "^6.4.0",
+    "babelify": "^7.3.0",
     "browserify": "^11.2.0",
     "chai": "^3.4.0",
     "chai-as-promised": "^5.1.0",
