--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
-    "babel-cli": "^6.18.0",
-    "babel-plugin-istanbul": "^3.0.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browserify": "^11.2.0",
-    "chai": "^3.4.0",
-    "chai-as-promised": "^5.1.0",
-    "cross-env": "^1.0.7",
-    "debug": "^2.2.0",
-    "eslint": "^3.6.0",
-    "eslint-plugin-react": "^6.1.2",
-    "isomorphic-fetch": "^2.2.1",
-    "matcha": "^0.7.0",
-    "minifyify": "^7.1.0",
-    "mocha": "^3.0.2",
-    "mocha-jenkins-reporter": "^0.2.6",
-    "mochawesome": "^1.5.2",
-    "nodemon": "^1.7.3",
-    "nyc": "^8.1.0",
-    "rewire": "^2.3.4",
-    "server-destroy": "^1.0.1",
-    "sinon": "^1.17.2",
-    "supertest": "^1.2.0",
-    "watchify": "^3.4.0"
+    "@kadira/storybook": "2.21.0",
+    "babel-cli": "6.18.0",
+    "babel-plugin-istanbul": "3.0.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-register": "6.18.0",
+    "babelify": "7.3.0",
+    "browserify": "11.2.0",
+    "chai": "3.4.0",
+    "chai-as-promised": "5.1.0",
+    "cross-env": "1.0.7",
+    "debug": "2.2.0",
+    "eslint": "3.6.0",
+    "eslint-plugin-react": "6.1.2",
+    "isomorphic-fetch": "2.2.1",
+    "matcha": "0.7.0",
+    "minifyify": "7.1.0",
+    "mocha": "3.0.2",
+    "mocha-jenkins-reporter": "0.2.6",
+    "mochawesome": "1.5.2",
+    "nodemon": "1.7.3",
+    "nyc": "8.1.0",
+    "rewire": "2.3.4",
+    "server-destroy": "1.0.1",
+    "sinon": "1.17.2",
+    "supertest": "1.2.0",
+    "watchify": "3.4.0"
   },
   "dependencies": {
-    "bluebird": "^3.0.5",
-    "body-parser": "^1.14.1",
-    "dateformat": "^2.0.0",
-    "express": "^4.13.3",
-    "express-http-proxy": "^0.9.1",
-    "history": "^3.0.0",
-    "jsdom": "^9.4.2",
-    "morgan": "^1.7.0",
-    "pg": "^6.1.0",
-    "pg-then": "^1.2.1",
-    "postal": "^2.0.5",
-    "pretty-bytes": "^3.0.1",
+    "bluebird": "3.0.5",
+    "body-parser": "1.14.1",
+    "dateformat": "2.0.0",
+    "express": "4.13.3",
+    "express-http-proxy": "0.9.1",
+    "history": "3.0.0",
+    "jsdom": "9.4.2",
+    "morgan": "1.7.0",
+    "pg": "6.1.0",
+    "pg-then": "1.2.1",
+    "postal": "2.0.5",
+    "pretty-bytes": "3.0.1",
     "react": "15.1.0",
-    "react-bootstrap": "^0.29.0",
+    "react-bootstrap": "0.29.0",
     "react-dom": "15.1.0",
-    "request": "^2.65.0",
-    "socket.io": "^1.7.1"
+    "request": "2.65.0",
+    "socket.io": "1.7.1"
   }
 }
