--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-preset-react": "6.16.0",
     "babel-register": "6.18.0",
     "babelify": "7.3.0",
-    "browserify": "11.2.0",
+    "browserify": "^13.1.1",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
     "cross-env": "3.1.3",
