--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mocha-jenkins-reporter": "0.3.1",
     "mochawesome": "1.5.4",
     "nodemon": "1.11.0",
-    "nyc": "8.1.0",
+    "nyc": "^10.0.0",
     "rewire": "2.5.2",
     "server-destroy": "1.0.1",
     "sinon": "1.17.6",
@@ -41,9 +41,10 @@
     "pg-then": "1.2.1",
     "postal": "2.0.5",
     "pretty-bytes": "4.0.2",
-    "react": "15.1.0",
-    "react-bootstrap": "0.29.0",
-    "react-dom": "15.1.0",
+    "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.1",
     "socket.io": "1.7.1"
   }
+ 
 }
