--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "devDependencies": {
-    "@kadira/storybook": "2.21.0",
     "babel-cli": "6.18.0",
     "babel-plugin-istanbul": "3.0.0",
     "babel-preset-es2015": "6.18.0",
@@ -26,7 +25,8 @@
     "server-destroy": "1.0.1",
     "sinon": "1.17.6",
     "supertest": "2.0.1",
-    "watchify": "3.7.0"
+    "watchify": "3.7.0",
+    "@kadira/storybook": "^2.21.0"
   },
   "dependencies": {
     "bluebird": "3.4.6",
@@ -35,7 +35,7 @@
     "express": "4.14.0",
     "express-http-proxy": "0.10.1",
     "history": "4.4.1",
-    "jsdom": "9.4.2",
+    "jsdom": "^9.8.3",
     "morgan": "1.7.0",
     "pg": "6.1.0",
     "pg-then": "1.2.1",
