--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "devDependencies": {
+    "@kadira/storybook": "^2.34.0",
     "babel-cli": "6.18.0",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-istanbul": "3.0.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
@@ -11,7 +13,7 @@
     "chai-as-promised": "6.0.0",
     "cross-env": "3.1.3",
     "debug": "2.3.3",
-    "eslint": "3.11.1",
+    "eslint": "^3.12.2",
     "eslint-plugin-react": "6.8.0",
     "isomorphic-fetch": "2.2.1",
     "matcha": "0.7.0",
@@ -25,8 +27,7 @@
     "server-destroy": "1.0.1",
     "sinon": "1.17.6",
     "supertest": "2.0.1",
-    "watchify": "3.7.0",
-    "@kadira/storybook": "^2.21.0"
+    "watchify": "3.7.0"
   },
   "dependencies": {
     "bluebird": "3.4.6",
@@ -46,5 +47,4 @@
     "react-dom": "^15.4.1",
     "socket.io": "1.7.1"
   }
- 
 }
